<resources>
    <string name="app_name">噗噗</string>

    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>

    <!--base-->
    <string name="base_no_internet">网络不可用</string>
    <string name="base_aotu_error">验证码错误</string>

    <!--LoadingActivity-->
    <string name="need_permission">您需要开启权限,并重启应用</string>

    <!--LoginAge-->
    <string name="la_app_name">软件名</string>
    <string name="la_privacy1">输入你的年龄，你自动同意为我们的</string>
    <string name="la_privacy2">条款</string>
    <string name="la_privacy3">和</string>
    <string name="la_privacy4">隐私政策</string>
    <string name="la_choice_age">选择你的年龄</string>
    <string name="la_quick_start">快速进入</string>
    <string name="la_age_invail">对不起，你的年龄未达到要求，谢谢配合检查~</string>
    <string name="la_i_know">知道了~</string>

    <!--Login-->
    <string name="login_tv_phone_number">手机号</string>
    <string name="login_et_phone_number">输入手机号</string>
    <string name="login_auth_code">验证码</string>
    <string name="login_edt_auth_code">输入验证码</string>
    <string name="login_get_auth_code">发验证码</string>
    <string name="login_next">快速进入</string>
    <string name="laz_tv_authorization">权限开启</string>
    <string name="laz_btn_get_address">获取地址位置</string>
    <string name="laz_tv_tips1">帮助你找到你的学校</string>
    <string name="laz_btn_get_address_book">获取通讯录</string>
    <string name="laz_tv_tips2">为你推荐在APP内的好友</string>
    <string name="cl_primary_header">现在读年级</string>

    <!--Contribute-->
    <string name="contribute_text1">投稿你的问题，让同校同学回答！ \n投稿审核通过后，将匿名展示投票内容～</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_modify_name">修改姓名</string>
    <string name="title_modify_nickname">修改用户名</string>
    <string name="title_modify_gender">修改性别</string>
    <string name="tips1_name_mofify_num">还有%1$s次修改机会</string>
    <string name="hint_input_username">请输入姓名</string>
    <string name="hint_input_nickname">请输入用户名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="which_class">几年级啦</string>
    <string name="which_school">在哪里上学呀</string>
    <string name="search">搜索</string>
    <string name="hint_search_gate">搜索用户门牌号</string>
    <string name="people_maybe_known">可能认识的人</string>
    <string name="classmate_in_same_school">同校同学</string>
    <string name="filter">筛选</string>
    <string name="invite_friends">未开通好友</string>
    <string name="already_registered">已开通</string>
    <string name="invite_tips">邀请更多好友来玩吧</string>
    <string name="my_item_friend">好友</string>
    <string name="name">姓名</string>
    <string name="username">用户名</string>
    <string name="school">学校</string>
    <string name="grade">年级</string>
    <string name="friend_add">添加</string>
    <string name="friend_request">请求</string>
    <string name="friend_diamonds">钻石</string>
    <string name="diamonds_list">钻石列表</string>
    <string name="my_friends">我的好友</string>
    <string name="as_friends">互为好友</string>
    <string name="invite_code">邀请码</string>
    <string name="input_invite_code">输入邀请码</string>
    <string name="invalid_invite_code">X 邀请码无效</string>
    <string name="invite_code_description">亲爱的同学们：\n真诚邀请你们全宇宙领先试玩产品!欢迎各位指出产品的不足，我们会认真对待~\n如果你没有邀请码，不要失落。产品对你开放时，我们会第一时间告诉你。每一位用户的感受，我们都很重视。感谢支持！ᕕ(ᐛ)ᕗ\n联系我们：2137930181（QQ）</string>
    <string name="invite_code_description2">产品团队敬上</string>
    <string name="invite_code_description3">2017年12月12日</string>
    <string name="next">下一步</string>
    <string name="search_result">搜索结果</string>
    <string name="hint_search_school">输入校名</string>
    <string name="username_colon">用户名：%1$s</string>
    <string name="warning_no_school_name">校名不能为空</string>
    <string name="empty_school_tips1">没找到呦</string>
    <string name="empty_school_tips2">请确认输入完整校名</string>
    <string name="empty_school_tips3">╮(╯▽╰)╭</string>
    <string name="username_already_exist">用户名已经存在</string>
    <string name="look_for_classmates">找同校好友燥起来</string>
    <string name="look_for_sameclass">找同年好友一起玩</string>
    <string name="filter_all">全部</string>
    <string name="filter_boy">男生</string>
    <string name="filter_girl">女生</string>
    <string name="filter_same_grade">同年级</string>
    <string name="username_colon_only">用户名：</string>
    <string name="aif_message_invite_text">我们将会发短信为你邀请朋友，请谨慎使用避免骚扰～</string>
    <string name="aafd_text1">你想匿名跟谁悄悄话？</string>
    <string name="aafg_text2">通讯录好友</string>
    <string name="aafg_text3">同校好友</string>
    <string name="guide_finish_text2">人缘不要太好!</string>
    <string name="contribute_selecte_img">选择图片</string>
    <string name="contribute_note">匿名投稿你的问题, 让同校同年级同学回答</string>
    <string name="contribute_commit_hint">输入投稿标题, 最多30个字</string>
    <string name="contribute_commit_text_count_hint">0/30</string>
    <string name="contribute_title">投稿</string>
    <string name="contribute_submit">提交</string>
    <string name="contribute_submit_complete">完成</string>
    <string name="contribute_submit_query">查看投稿</string>
    <string name="contribute_submit_verify">匿名投稿成功，审核中(*^__^*)</string>
    <string name="contribute_offline">未上线</string>
    <string name="contribute_online">已上线</string>
    <string name="contribute_offline_reviewing">审核中</string>
    <string name="contribute_offline_refused">审核未通过</string>
    <string name="contribute_offline_reviewing_warning">正在急速审核中~</string>
    <string name="delete">删除</string>
    <string name="re_edit">重新编辑</string>
    <string name="question_delete_contribute_msg">是否删除投稿</string>
    <string name="contribute_answer_num_note_msg1">位同学心中的top3答案是</string>
    <string name="contribute_answer_num_note_msg">N位同学心中的top3答案是</string>
    <string name="hot">热度</string>
    <string name="zero">0</string>
    <string name="contribute_success">提交成功</string>
    <string name="set_age_error">设置年龄失败</string>
    <string name="open_contact_key">开启通讯录权限</string>
    <string name="open_contact_message">方便您找到正在使用本产品的好友</string>
    <string name="laz_open_local">请开启位置服务</string>
    <string name="laz_open_local_auto">开启位置权限</string>
    <string name="laz_recently_school">通过您的位置定位离您最近的学校</string>
    <string name="aic_incete_code_is_null">邀请码为空</string>
    <string name="uif_set_name">请设置姓名</string>
    <string name="uif_legal_name_length">请输入合理的姓名长度</string>
    <string name="uif_refuse_one">您已经拒绝过一次</string>
    <string name="uif_device_no_sd">设备没有SD卡！</string>
    <string name="uif_please_open_camera">请允许打开相机！！</string>
    <string name="same_school_grade_no_submit">暂无同校同年级同学投票</string>
    <string name="login_tips">看看我有多受欢迎</string>
    <string name="head_img_upload_error">头像上传失败</string>
    <string name="frgans_cooling_keep">后 继续答题</string>
    <string name="frgans_cooling_or">— 或者 —</string>
    <string name="frgans_cooling_invite_friend">邀请好友 马上答题</string>
    <string name="marl_titil">上周话题明星</string>
</resources>
