<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yeejay.yplay.login.Login">

    <include layout="@layout/layout_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="120dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_phone_number"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="3dp"
            android:layout_marginLeft="20dp"
            />
        <EditText
            android:id="@+id/login_edt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_et_phone_number"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:maxLength="11"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_auth_code"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="3dp"
            android:layout_marginLeft="20dp"
            />
        <EditText
            android:id="@+id/login_edt_auth_code"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_edt_auth_code"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            />
        <Button
            android:id="@+id/login_get_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_get_auth_code"           android:background="@android:color/transparent"
            android:textSize="18sp"
            android:enabled="false"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_next"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:enabled="false"
        />
</LinearLayout>
