<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/invite_background"
    tools:context="com.yeejay.yplay.login.ActivityInviteCode">
    <ImageButton
        android:id="@+id/aic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/white_back"
        android:background="@color/color_transparent"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="6dp"
        />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/invite_code_up_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_code"
            android:layout_gravity="center"
            android:textColor="#333333"
            android:textSize="26sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:text="@string/invite_code_description"
            android:textColor="#555555"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingEnd="6dp"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:text="@string/invite_code_description2"
            android:textColor="#555555"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingEnd="6dp"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:text="@string/invite_code_description3"
            android:textColor="#555555"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/invite_code_bg"
        >

        <EditText
            android:id="@+id/aic_code_input"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/input_invite_code"
            android:inputType="number"
            android:textColorHint="@color/white20"
            android:textCursorDrawable="@drawable/shape_cursor_drawable"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/invite_line" />
        <TextView
            android:id="@+id/aic_code_invalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/invalid_invite_code"
            android:textColor="@color/invite_invalid_code"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            />
        
        <Button
            android:id="@+id/aic_enter"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/selector_login_btn_background"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</LinearLayout>
