<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.yeejay.yplay.contribute.ActivityContribute1">

    <TextView
        android:id="@+id/layout_title2"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@color/white"
        android:text="@string/contribute_title"
        android:maxEms="6"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        style="@style/friend_title_style" />


    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal" >
        <ImageView
            android:id="@+id/con_selected_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/contribute_complete" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/contribute_submit_verify"
        android:textSize="14sp"
        android:textColor="@color/feeds_hight_gray"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/con_submit_complete"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:text="@string/contribute_submit_complete"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_blue_btn_background"
        android:textSize="16sp" />

    <Button
        android:id="@+id/con_query_contribute"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:text="@string/contribute_submit_query"
        android:textColor="@drawable/selector_contribute_complete_btn_text_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_blue_btn_stroke_background"
        android:textSize="16sp" />

</LinearLayout>