<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_round_background"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="12.6dp"
        android:paddingBottom="13.4dp"
        android:text="@string/question_delete_contribute_msg"
        android:textColor="#8F8E94"
        android:textSize="13sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/divider_color"/>
    <Button
        android:id="@+id/message_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="12.6dp"
        android:paddingBottom="13.4dp"
        android:text="@string/delete"
        android:textColor="@color/message_profile_red"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/divider_color"/>
    <Button
        android:id="@+id/message_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="16.5dp"
        android:paddingBottom="12.5dp"
        android:text="@string/cancel"
        android:textColor="@color/message_profile_blue"
        android:textSize="20sp"/>
</LinearLayout>