<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frans_cooling_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_answer_gradient">

    <TextView
        android:id="@+id/frgans_cooling_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="- 冷却时间 -"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:layout_width="312dp"
        android:layout_height="402dp"
        android:background="@drawable/shape_white_round25"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:layout_below="@+id/frgans_cooling_title"
        >

        <LinearLayout
            android:id="@+id/frgans_ll_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="82dp"
            android:layout_centerHorizontal="true"
            >
            <cn.iwgang.countdownview.CountdownView
                android:id="@+id/frgans_count_down_view"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:isHideTimeBackground="true"
                app:isShowMinute="true"
                app:isShowSecond="true"
                app:timeTextColor="@color/my_item_font_color"
                app:timeTextSize="22sp"
                app:isTimeTextBold="true"
                app:suffixGravity="bottom"
                app:suffixTextColor="@color/my_item_font_color"
                app:suffixTextSize="22sp"
                app:suffixMinute="分"
                app:suffixSecond="秒"
                app:isSuffixTextBold="true"
                android:layout_marginTop="4dp"
                />
            <TextView
                android:id="@+id/frgans_cooling_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frgans_cooling_keep"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/my_item_font_color"
                android:gravity="center"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/frgans_tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frgans_cooling_or"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/my_item_font_color"
            android:layout_below="@+id/frgans_ll_count"
            android:layout_marginTop="40dp"
            />
        <Button
            android:id="@+id/frgans_btn_invite"
            android:layout_width="218dp"
            android:layout_height="54dp"
            android:layout_below="@+id/frgans_tv_or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_cooling_button"
            android:text="@string/frgans_cooling_invite_friend"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/answer_cooling_finger"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/frgans_img"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/shape_white_round"
        android:src="@drawable/answer_cooling"
        android:layout_below="@+id/frgans_cooling_title"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:elevation="2dp"
        android:layout_marginTop="13dp"
        />
</RelativeLayout>